--- a/WinformRopeRounding/Properties/Resources.resx
+++ b/WinformRopeRounding/Properties/Resources.resx
@@ -118,14 +118,32 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="NoSignal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\NoSignal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Keypad-UpLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-UpLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Keypad-Center" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\Keypad-Center.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-ZoomIn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-ZoomIn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-Left-Dn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-Left-Dn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-Left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-Right-Dn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-Right-Dn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-UpRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-UpRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-Right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-Up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-Up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Keypad-ZoomOut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-ZoomOut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Keypad-Dn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\Keypad-Dn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,28 +151,16 @@
   <data name="Keypad-Home" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\Keypad-Home.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Keypad-Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-Left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Keypad-FocusBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-FocusBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Keypad-Left-Dn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-Left-Dn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Keypad-UpLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-UpLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Keypad-Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-Right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NoSignal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\NoSignal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Keypad-Right-Dn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-Right-Dn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Keypad-Up" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-Up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Keypad-UpRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-UpRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Keypad-ZoomIn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-ZoomIn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Keypad-ZoomOut" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\Keypad-ZoomOut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Keypad-FocusFront" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\Keypad-FocusFront.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
